--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.notifications-component {
+  margin-top: 70px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
