--- a/src/screens/Cart/Cart.css
+++ b/src/screens/Cart/Cart.css
@@ -42,3 +42,72 @@
 .notifications-component {
   margin-top: 70px;
 }
+
+.check_out {
+  color: #6b74a8;
+  margin-right: 5px;
+}
+
+.footer-navigation {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  background-color: rgb(43, 65, 90);
+  color: white;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.footer-navigation:hover {
+  color: rgb(250, 149, 16);
+}
+
+.fixed_footer {
+  margin-bottom: 10px;
+  display: flex;
+  width: 100%;
+}
+
+.fixed_footer li {
+  width: 50%;
+  list-style: none;
+}
+
+.cost_info {
+  color: #d6d31e;
+  /* float: left; */
+  /* display: flex; */
+}
+
+.cost_info:hover {
+  color: bisque;
+}
+
+.check_out {
+  color: rgb(223, 223, 223);
+  /* float: right; */
+  display: inline;
+}
+
+.check_out p {
+  margin-top: 0px !important;
+  display: flex;
+  float: right;
+  margin-right: 100px;
+  background-color: rgb(44, 36, 53);
+  padding: 5px;
+  border-radius: 10px;
+  border: 3px solid rgb(162, 185, 28);
+}
+
+.check_out p:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(44, 36, 53);
+  border: 3px solid rgb(214, 144, 187);
+}
+
+.check_out p:hover {
+  
+}
